[gd_scene load_steps=5 format=2]

[ext_resource path="res://standard.gd" type="Script" id=1]
[ext_resource path="res://alicia/AliciaSolid_vrm-0.51.glb" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.141176, 0.192157, 0.662745 )

[sub_resource type="SphereMesh" id=2]

[node name="Standard" type="Spatial"]
script = ExtResource( 1 )

[node name="Ui" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Ui"]
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Ui/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 282.2
margin_bottom = 275.0

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/PanelContainer/ScrollContainer"]
margin_right = 277.2
margin_bottom = 260.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 277.0
margin_bottom = 82.0
text = "<escape> to toggle the UI
<shift> to spin Alicia
<space> to reset the scene
WASD to move the camera
QE to move down/up"
autowrap = true

[node name="LightToggle" type="CheckButton" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 277.0
margin_bottom = 126.0
text = "Light"

[node name="Label3" type="Label" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 277.0
margin_bottom = 144.0
text = "FOV"

[node name="FOV" type="LineEdit" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 277.0
margin_bottom = 172.0

[node name="Label2" type="Label" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 277.0
margin_bottom = 190.0
text = "Mouse sensitivity"

[node name="MouseSensitivity" type="LineEdit" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 277.0
margin_bottom = 218.0

[node name="ViewportType" type="Label" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 277.0
margin_bottom = 236.0

[node name="SwitchViewport" type="Button" parent="Ui/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 277.0
margin_bottom = 260.0
text = "Switch viewport type"

[node name="CameraMount" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Camera" type="Camera" parent="CameraMount"]

[node name="Alicia" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="MeshInstance" type="MeshInstance" parent="OmniLight"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Label3D" type="Label3D" parent="OmniLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.452438, 0 )
billboard = 1
text = "It's a light :)"
